Novas features e reorganização estrutural

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-central-erros-end/.classpath
-central-erros-end/.project
-central-erros-end/target
+backend/.classpath
+backend/.project
+backend/.idea
+backend/.vscode
+backend/target
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+
+# testing
+frontend/coverage
+
+# production
+frontend/build
+
+# misc
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
