--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "history": "^4.10.1",
-    "polished": "^3.4.2",
     "mui-datatables": "^2.13.3",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -16,7 +17,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactotron-react-js": "^3.3.7",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
