--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,21 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "history": "^4.10.1",
-    "polished": "^3.4.2",
+    "immer": "^5.0.1",
     "mui-datatables": "^2.13.3",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
   },
   "scripts": {
